# clever-project

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  instances.json  project.clever.json  project.clever.toml  project.clever.yaml  test_project.yaml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: reference.md
documentation/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
documentation/docs/: completions.mdx  contributing.mdx  cross-references.mdx  display.mdx  hooks.mdx  installation.mdx  introduction.mdx  json-output.mdx  limitations.mdx  managed-addons.mdx  project-file.mdx  quick-start.mdx  secrets.mdx  state.mdx  variables.mdx
documentation/docs/commands/: apply.mdx  check.mdx  delete.mdx  index.mdx  init.mdx  read.mdx  status.mdx
documentation/src/css/: custom.css
documentation/src/pages/: index.js
recipes/: project.n8n.yaml
scripts/: release.sh
src/: clever.rs  cli.rs  hooks.rs  interpolate.rs  issues.rs  lock.rs  main.rs  model.rs  state.rs
src/commands/: apply.rs  check.rs  completions.rs  cross_refs.rs  delete.rs  diff.rs  init.rs  live.rs  mod.rs  plan.rs  prompt.rs  read.rs  status.rs  targets.rs  unlock.rs
