[package]
name = "clever-project"
version = "0.0.7"
edition = "2024"
rust-version = "1.85"
description = "Declare Clever Cloud resources in a YAML/JSON file and sync them via the clever-tools CLI."
license = "Apache-2.0"
repository = "https://github.com/mathieuancelin/clever-project"
homepage = "https://github.com/mathieuancelin/clever-project"
readme = "README.md"
keywords = ["clever-cloud", "deploy", "cli", "iac", "infrastructure"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
